<resources>
    <string name="app_name">Sub-Youtube</string>
    <string name="bottom_bar_home">Home</string>
    <string name="bottom_bar_owner">My Video</string>
    <string name="bottom_bar_channel">Channel</string>
    <string name="bottom_bar_account">Account</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_add_my_video">Add to</string>
    <string name="label_up_next">Up next</string>
    <string name="action_auto_play">Auto play</string>
    <string name="label_recent">Recent</string>
    <string name="label_channel">My Channels</string>
    <string name="action_history">History</string>
    <string name="action_add_channel">Add Channel</string>
    <string name="label_channel_selected">Channel Selected</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
</resources>
